update standing api and update reame and composer
